--- a/index.html
+++ b/index.html
@@ -16,8 +16,12 @@
         </div>
         <div class="main window-body">
         	<p class="nomar">мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
-        	<h5>Руша</h5>
-        	<p>мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
+        	<div class="buttons">
+        		<button><h5>Руша</h5></button>
+        		<button><h5>Руша</h5></button>
+        		<button><h5>Руша</h5></button>
+        		<button><h5>Руша</h5></button>
+        	</div>
         </div>
     </div>
 </body>
