--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <div class="header">
         	<p>Лесные <br> поздравления!</p>
         </div>
+        <div class="meow animated-thing">
+            <img src="Big_Khlopa.png" alt="">
+        </div>
         <div class="main window-body">
         	<p class="nomar">мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
         	<div class="buttons">
-        		<button><h5>Руша</h5></button>
-        		<button><h5>Руша</h5></button>
-        		<button><h5>Руша</h5></button>
-        		<button><h5>Руша</h5></button>
+        		<button><i><h5>Начать приключение</h5></i></button>
         	</div>
         </div>
     </div>
