stars burn and sex has beeen dobavleno

--- a/index.html
+++ b/index.html
@@ -6,24 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://unpkg.com/98.css">
+    <link rel="stylesheet" href="srars.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-    <div class="wrapper window ">
+<body id="starshine">
+    <div class="wrapper window">
         <div class="header">
-        	<p>Лесные <br> поздравления!</p>
+            <div class="template shine"></div>
+            <p>Лесные <br> поздравления!</p>
         </div>
-        <div class="meow animated-thing">
-            
+        <div class="animated-thing">
         </div>
         <div class="main window-body">
-        	<p class="nomar">мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
-        	<div class="buttons">
-        		<button><i><h5>Начать приключение</h5></i></button>
-        	</div>
+            <p class="nomar">мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
+            <div class="buttons">
+                <button><i>
+                        <h5>Начать приключение</h5>
+                    </i></button>
+            </div>
         </div>
     </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
+    <script src="stars.js"></script>
 </body>
 
 </html>
