--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </div>
         <div class="main window-body">
             <p class="nomar">мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
+            <img src="el2.jpg" alt="">
             <div class="buttons">
                 <button><i>
                         <h5>Начать приключение</h5>
