--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="animated-thing">
         </div>
         <div class="main window-body">
-            <p class="nomar">мяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муямяв ямвмямяявяя я мяумя муя</p>
+            <p class="nomar">Дорогой Дерб! Мы, жители леса, приготовили для вас целое веб пространство, чтобы познакомить вас с нашим лесом!! <br> Вчетвером, мы написали вам маленькие странички, каждый оформил и наполнил свою страничку так, как хотел! <br> Мы надеемся вам понравится это маленькое приключение, ведь мы очень старались..</p>
             <img src="el2.jpg" alt="">
             <div class="buttons">
                 <button><i>
@@ -27,6 +27,9 @@
                     </i></button>
             </div>
         </div>
+    </div>
+    <div class="addsh">
+        <img src="el3.gif" alt="">
     </div>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js'></script>
     <script src="stars.js"></script>
