added some sex and more sex to sex with

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Лeсное веб пространство   </title>
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="stylesheet" href="srars.css">
     <link rel="stylesheet" href="style.css">
@@ -22,9 +22,9 @@
             <p class="nomar">Дорогой Дерб! Мы, жители леса, приготовили для вас целое веб пространство, чтобы познакомить вас с нашим лесом!! <br> Вчетвером, мы написали вам маленькие странички, каждый оформил и наполнил свою страничку так, как хотел! <br> Мы надеемся вам понравится это маленькое приключение, ведь мы очень старались..</p>
             <img src="el2.jpg" alt="">
             <div class="buttons">
-                <button><i>
-                        <h5>Начать приключение</h5>
-                    </i></button>
+                <a href="rusha.html" target="blank"><button><i>
+                        <h5>Начать приключение!</h5>
+                    </i></button></a>
             </div>
         </div>
     </div>
