САМ СЕКС ЕНД СЕКС

--- a/battiscoolpage.html
+++ b/battiscoolpage.html
@@ -7,7 +7,8 @@
     <title>COOL BATTI"S SPACE!</title>
     <link rel="stylesheet" href="battisstyle.css">
 </head>
-
+<!-- памятка для себя типа у батти что-то между горелым лесом панком подпрррррр максимализмом и милой увувуву собирает цветочки и тд
+может ему даже пару страниц смогу сделать -->
 <body>
 
 <div class="ME"> <img src="ME.gif" alt=""> </div>
