added lots of sex and sex with sex to sex sex sex

--- a/battiscoolpage.html
+++ b/battiscoolpage.html
@@ -5,12 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COOL BATTI"S SPACE!</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="battisstyle.css">
 </head>
-<!-- памятка для себя типа у батти что-то между горелым лесом панком подпрррррр максимализмом и милой увувуву собирает цветочки и тд
-может ему даже пару страниц смогу сделать -->
 <body>
 
-<div class="ME"> <img src="ME.gif" alt=""> </div>
+<div class="ME"> <img src="ME.gif" alt="">
+    <iframe style="border: 0; width: 33%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3150324576/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=none/track=3849032587/transparent=true/" seamless><a href="https://dynastic.bandcamp.com/album/i-know-theres-something-left-for-you">I know there&#39;s something left for you by dynastic</a></iframe>
+    <P>Привет Дерб, вот ты и на моём двустороннем уголке B-D</P>
+    <P>Я Баттеркап, люблю заниматься разными оккультными вещами просто ради интереса, слушаю тяжелую музыку, и занимаюсь этим со всеми остальными <br> <i>чтобы перейти на вторую, нажми на цветочек</i></P>
+    <div class="block1">
+        <img src="Candle2.gif" alt="">
+    <img src="fire.gif" alt="">
+    </div>
+    <img src="animoon.gif" alt="">
+    <img src="halloween.png" alt="">
+    <div class="block1">
+        <img src="gotohell.gif" alt="">
+    <img src="ieievil.gif" alt="">
+
+    </div>
+        <img src="victims.gif" alt="">
+ </div>
+ <a href="battiscalmpage.html"><img class="flovera" src="flowers.gif" alt=""></a>
 
 </body>
