--- a/battiscoolpage.html
+++ b/battiscoolpage.html
@@ -13,6 +13,11 @@
 <body>
 
 <div class="ME"> <img src="ME.gif" alt="">
+    <div class="block1">
+        <img src="cd.gif" alt="">
+    <img src="cd.gif" alt="">
+    <img src="cd.gif" alt="">
+    </div>
     <iframe style="border: 0; width: 33%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3150324576/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=none/track=3849032587/transparent=true/" seamless><a href="https://dynastic.bandcamp.com/album/i-know-theres-something-left-for-you">I know there&#39;s something left for you by dynastic</a></iframe>
     <P>Привет Дерб, вот ты и на моём двустороннем уголке B-D</P>
     <P>Я Баттеркап, люблю заниматься разными оккультными вещами просто ради интереса, слушаю тяжелую музыку, и занимаюсь этим со всеми остальными <br> <i>чтобы перейти на вторую, нажми на цветочек</i></P>
