--- a/battiscoolpage.html
+++ b/battiscoolpage.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>COOL BATTI"S SPACE!</title>
+        <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Rubik+Wet+Paint&display=swap" rel="stylesheet">
@@ -18,7 +19,7 @@
     <img src="cd.gif" alt="">
     <img src="cd.gif" alt="">
     </div>
-    <iframe style="border: 0; width: 33%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=3150324576/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=none/track=3849032587/transparent=true/" seamless><a href="https://dynastic.bandcamp.com/album/i-know-theres-something-left-for-you">I know there&#39;s something left for you by dynastic</a></iframe>
+    <iframe style="border: 0; width: 33%; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/track=4290576413/size=large/bgcol=333333/linkcol=e32c14/tracklist=false/artwork=small/transparent=true/" seamless><a href="https://stomachbook.bandcamp.com/track/we-all-fall-down">We All Fall Down by STOMACH BOOK</a></iframe>
     <P>Привет Дерб, вот ты и на моём двустороннем уголке B-D</P>
     <P>Я Баттеркап, люблю заниматься разными оккультными вещами просто ради интереса, слушаю тяжелую музыку, и занимаюсь этим со всеми остальными <br> <i>чтобы перейти на вторую, нажми на цветочек</i></P>
     <div class="block1">
