--- a/rusha.html
+++ b/rusha.html
@@ -5,7 +5,7 @@
         >
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>пространство Руши!!!  
-               </title>
+               </title>    <link rel="stylesheet" href="https://unpkg.com/98.css">
 </head>
 <body background="oboinasayt.jpg">
 <font       color="white">я Руша привет Дерб! меня зовут Руша я козлик! <br> </font>
