--- a/NADOELI.HTML
+++ b/NADOELI.HTML
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<img src="Big_Khlopa.png" alt=""> - Вы НАДОЕЛИ ЛОМАТЬ МНЕ САЙТ Я ВЕДЬ ЕГО ДАЖЕ НЕ ЗАВЕРШИЛ! <br>
-	<img src="rybina.png" alt=""> - но ты ведь сам к нам лез, и <i>"чинил"</i> сайты <br>
+	<img src="Rybina.png" alt=""> - но ты ведь сам к нам лез, и <i>"чинил"</i> сайты <br>
 	<img src="Batya_No_Malenkiy.gif" alt=""> - давайте просто секс будем) <br>
-	<img src="rybina.png" alt=""> - хорошо, Батти~ <br>
+	<img src="Rybina.png" alt=""> - хорошо, Батти~ <br>
 	<img src="Big_Khlopa.png" alt=""> - ВЫ НОРМАЛЬНЫЕ??????<br>
 	<a href="credits.html">
 		<img style="position: relative;" src="DA.png" alt="">
