ДОПИСАЛА ПОСЛЕДНЮЮ СТРАНИЦУ УРАА

--- a/luchiks_underwater_place.html
+++ b/luchiks_underwater_place.html
@@ -44,8 +44,10 @@
 
     </div>
     <a href="hlophlop.html">
+        <img src="autistic.gif" alt="">
     	<div class="moth">
     	<img src="2697466i7qk1brkd8.gif" alt="">
+
     </div>
     </a>
 </body>
