--- a/NADOELI.HTML
+++ b/NADOELI.HTML
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>НАДОЕЛИ</title>
 </head>
 <body>
 	<img src="Big_Khlopa.png" alt=""> - Вы НАДОЕЛИ ЛОМАТЬ МНЕ САЙТ Я ВЕДЬ ЕГО ДАЖЕ НЕ ЗАВЕРШИЛ! <br>
