--- a/battiscoolpage.html
+++ b/battiscoolpage.html
@@ -23,7 +23,7 @@
     <P>Привет Дерб, вот ты и на моём двустороннем уголке B-D</P>
     <P>Я Баттеркап, люблю заниматься разными оккультными вещами просто ради интереса, слушаю тяжелую музыку, и занимаюсь этим со всеми остальными <br> <i>чтобы перейти на вторую, нажми на цветочек</i></P>
     <div class="block1">
-        <img src="Candle2.gif" alt="">
+        <a href="CHTOSVECHA.html"><img src="Candle2.gif" alt=""></a>
     <img src="fire.gif" alt="">
     </div>
     <img src="animoon.gif" alt="">
