--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лeсное веб пространство   </title>
+    <title>Лeсное веб пространство </title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="https://unpkg.com/98.css">
     <link rel="stylesheet" href="srars.css">
     <link rel="stylesheet" href="style.css">
@@ -23,8 +27,8 @@
             <img src="el2.jpg" alt="">
             <div class="buttons">
                 <a href="rusha.html" target="blank"><button><i>
-                        <h5>Начать приключение!</h5>
-                    </i></button></a>
+                            <h5>Начать приключение!</h5>
+                        </i></button></a>
             </div>
         </div>
     </div>
