--- a/rusha.html
+++ b/rusha.html
@@ -21,10 +21,10 @@
 
 
 <img src="ptichki.jpg" alt="">
-<font color="white" size="12px">я грузил картинку с птичками весь вечер у нас медленный интернет прости но картинка красивая и мне нравится!!! <br> нашел эту красивую картинку очень! правда не знаю что написано а Хлоп-Хлоп почтоянно смеётся >:( </font>
+<font color="white" size="12px">я грузил картинку с птичками весь вечер у нас медленный интернет прости но картинка красивая и мне нравится!!! <br> нашел эту красивую картинку очень! правда не знаю что написано а Хлоп-Хлоп постоянно смеётся >:( </font>
 
 <img src="kartinka.gif" alt="">
-<font  size="12px"> надеюс тебе нравятся мой уголок я старался очень сильно хотел бы снова с тобой общатся вконтакте ты интересный очень надебст сможем подружиться!!!!!</font>
+<font  size="12px"> надеюсь тебе нравятся мой уголок я старался очень сильно хотел бы снова с тобой общатся вконтакте ты интересный очень надеюсь сможем подружиться!!!!!</font>
 
 <br><a href="battiscoolpage.html"><img src="battiscoollogo.gif" alt=""></a>
 
