--- a/NADOELI.HTML
+++ b/NADOELI.HTML
@@ -4,6 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>НАДОЕЛИ</title>
+	    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 </head>
 <body>
 	<img src="Big_Khlopa.png" alt=""> - Вы НАДОЕЛИ ЛОМАТЬ МНЕ САЙТ Я ВЕДЬ ЕГО ДАЖЕ НЕ ЗАВЕРШИЛ! <br>
