--- a/credits.html
+++ b/credits.html
@@ -26,7 +26,7 @@
 		<img src="jellyfish-t-b.gif" alt="">
 		<p>если кто-то как-то нашёл этот сайт, и думает что за бред я нашёл, то напиши мне в дискорд (LARA#5634), просто интересно узнать как и почему.. <br> а ну и</p>
 		<img src="furrything.jpg" alt="">
-		<a href="index.html"><img src="gate.gif" alt=""></a>
+		<a href="lesnoemau.html"><img src="gate.gif" alt=""></a>
 		<p><I><B>Вернутся обратно?</B></I></p>
 	</div>
 
