--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="wrapper">
         <h1>welocome to our studio's website!!!</h1>
         <p>aaaaaaaaaaaaaaaa sex is good :3</p>
+        <a href="lesnoemau.html"><p>lesnoe web prikluchenie tut!!</p></a>
     </div>
 </body>
 
