--- a/index.html
+++ b/index.html
@@ -34,17 +34,18 @@
     }
 
     .wrapper {
-    	margin: 20px;
+        margin: 20px;
     }
-
     </style>
 </head>
 
 <body>
     <div class="wrapper">
         <h1>welocome to our studio's website!!!</h1>
-        <p>aaaaaaaaaaaaaaaa sex is good :3</p>
-        <a href="lesnoemau.html"><p>lesnoe web prikluchenie tut!!</p></a>
+        <p>тут лежат ссылки на наши работы!</p>
+        <a href="lesnoemau.html">
+            <p>лесное веб приключение!!</p>
+        </a>
     </div>
 </body>
 
