--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
         <a href="lesnoemau.html">
             <p>лесное веб приключение!!</p>
         </a>
+        <a href="max.html">
+            <p>лесное веб приключение!!</p>
+        </a>
     </div>
 </body>
 
