--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <p>лесное веб приключение!!</p>
         </a>
         <a href="max.html">
-            <p>лесное веб приключение!!</p>
+            <p>Сервер по маайнкрафту макса!!!!!!!!!!</p>
         </a>
     </div>
 </body>
