--- a/rats/rat_slices.html
+++ b/rats/rat_slices.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div class="ad2"><div class="adb"></div></div>
+        <div class="ad2"><div class="adb">2</div></div>
     </div>
 
 </body>
