--- a/rats/rat_slices.html
+++ b/rats/rat_slices.html
@@ -15,7 +15,9 @@
 
         <div class="main">
             <div class="bl">
-            	
+            	<div class="blimg">
+                    
+                </div>
             </div>
 
             <div class="br">
