--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
     <h1 class="headtextuwu" >Lara<span class="color1">uwu</span><span class="color2">owo</span>'s page!!</h1> <h2 class="headtextuwu htuh2" >(under construction!!!)</h2>
 
+    <div class="line"><div class="linein"></div></div>
 
     <div class="container-fluid main">
     	<div class="row">
