--- a/index.html
+++ b/index.html
@@ -6,28 +6,64 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
+	        <div class="main">
+            <div class="path">
+                <p class="DOS">><a href="https://larauwuowo.gay/">larauwuowo.gay</a>/<a href="https://larauwuowo.gay/">index.html</a> </p>
+            </div>
+        </div>
 <body>
-    <h1 class="headtextuwu" >Lara<span class="color1">uwu</span><span class="color2">owo</span>'s page!!</h1> <h2 class="headtextuwu htuh2" >(under construction!!!)</h2>
 
-    <div class="line"><div class="linein"></div></div>
+    <h1 class="headtextuwu">Lara<span class="color1">uwu</span><span class="color2">owo</span>'s page!!</h1>
+    <h2 class="headtextuwu htuh2">(under construction!!!)</h2>
+    <div class="wrapper">
 
-    <div class="container-fluid main">
-    	<div class="row">
+        <div class="container-fluid navv">
+        	<div class="row flex-nowrap">
+        		<div class="col-xl-2">
+        			<a href=""><p>index</p></a>
+        		</div>
+        		<div class="col-xl-2">
+        			<a href=""><p>blog</p></a>
+        		</div>
+        		<div class="col-xl-2">
+        			<a href=""><p>projects</p></a>
+        		</div>
+        		<div class="col-xl-2">
+        			<a href=""><p>fun!</p></a>
+        		</div>
+        		<div class="col-xl-2">
+        			<a href=""><p>about me</p></a>
+        		</div>
+        		<div class="col-xl-2">
+        			<a href=""><p>contact me</p></a>
+        		</div>
+        	</div>
+        </div>
 
-    	</div>
+
     </div>
-
     <script src="script/oneko.js-main/oneko.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js" integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js" integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ" crossorigin="anonymous"></script>
 </body>
 
+</html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	
+</body>
 </html>
