--- a/fop/fop.html
+++ b/fop/fop.html
@@ -9,84 +9,121 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
     <style>
-    body {
-        background: #000;
-        font-family: 'Space Mono', monospace;
-        color: #8051f0;
-    }
+        body {
+            background: #000;
+            font-family: 'Space Mono', monospace;
+            color: #8051f0;
+        }
 
-    .container {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
+        .container {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
 
-    h1 {
-        text-align: center;
-        margin-bottom: 0;
-    }
+        h1 {
+            text-align: center;
+            margin-bottom: 0;
+        }
 
-    h2 {
-        margin-bottom: 20vh;
-        text-align: center;
-    }
+        h2 {
+            margin-bottom: 20vh;
+            text-align: center;
+        }
 
-    .gif {
-        width: 100%;
-        display: flex;
-        justify-content: center;
-    }
+        .gif {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+        }
 
 
-    .gif1 {
-        transition: 0.2s;
-        backgroundImage: url(fop.gif);
-        aspect-ratio: 1 / 1;
-        background-size: 100% 100%;
-        width: 15%;
-        display: flex;
-        flex-direction: column-reverse;
-    }
+        .gif1 {
+            transition: 0.2s;
+            background-image: url(fop.gif);
+            aspect-ratio: 1 / 1;
+            background-size: 100% 100%;
+            width: 15%;
+            display: flex;
+            flex-direction: column-reverse;
+        }
 
-    .gif1:active {
-        background: #000;
-        transition: 0.2s;
-        transition-property: transform, margin-top, background-size;
-        margin-top: 1%;
-        background-size: 100% 90%;
-        transform: scaleX(1.2);
-    }
+        .gif1:active {
+            background: #000;
+            transition: 0.2s;
+            transition-property: transform, margin-top, background-size;
+            margin-top: 1%;
+            background-size: 100% 90%;
+            transform: scaleX(1.2);
+        }
 
-    .gif2 {
-        transition: 0.2s;
-        transition-property: height, margin-top, transform;
-        backgroundImage: url(happifop.gif);
-        height: 100%;
-        opacity: 0;
-        aspect-ratio: 1 / 1;
-        background-size: 100% 100%;
-        width: 100%;
+        .gif2 {
+            transition: 0.2s;
+            transition-property: height, margin-top, transform;
+            background-image: url(happifop.gif);
+            height: 100%;
+            opacity: 0;
+            aspect-ratio: 1 / 1;
+            background-size: 100% 100%;
+            width: 100%;
 
-    }
+        }
 
-    .gif2:active {
-        opacity: 1;
-    }
+        .gif2:active {
+            opacity: 1;
+        }
 
-    .gif2:active {
-        transition: 0.2s;
-        transition-property: height, margin-top, background-size;
-        background-size: 100% 90%;
+        .gif2:active {
+            transition: 0.2s;
+            transition-property: height, margin-top, background-size;
+            background-size: 100% 90%;
 
-    }
+        }
+
+        .slider {
+            -webkit-appearance: none;
+            width: 100%;
+            height: 15px;
+            border-radius: 5px;
+            background: #d3d3d3;
+            outline: none;
+            opacity: 0.7;
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #8051f0;
+            cursor: pointer;
+        }
+
+        .slider::-moz-range-thumb {
+            width: 25px;
+            height: 25px;
+            border-radius: 50%;
+            background: #8051f0;
+            cursor: pointer;
+        }
     </style>
 </head>
 
 <body>
     <div class="container">
         <audio id="sfx">
-            <source src="yip.mp3"></audio>
+            <source src="yip.mp3">
+        </audio>
+        <div class="volume-container">
+            <label>
+                volume
+                <input type="range" min="0" max="100" value="0" class="slider" id="volume">
+            </label>
+        </div>
         <div class="text">
             <h1>Pet the fop, Pet her</h1>
             <i>
@@ -94,40 +131,47 @@
             </i>
         </div>
         <div class="gif">
-            <div id="cat" onclick="playsound()" class="gif1">
-                <div id="fox" class="gif2" id="anim2"></div>
+            <div id="img1" onclick="playsound()" class="gif1">
+                <div id="img2" class="gif2" id="anim2"></div>
             </div>
         </div>
     </div>
     </div>
     <script>
-    const catImg = document.querySelector('#cat')
-    const foxImg = document.querySelector('#fox')
+        const img1 = document.querySelector('#img1')
+        const img2 = document.querySelector('#img2')
 
-    function loadImage(src) {
-        return new Promise((resolve, reject) => {
-            const img = new Image()
-            img.src = src
-            img.onload = () => resolve(img)
-            img.onerror = () => reject(img)
+        function loadImage(src) {
+            return new Promise((resolve, reject) => {
+                const img = new Image()
+                img.src = src
+                img.onload = () => resolve(img)
+                img.onerror = () => reject(img)
+            })
+        }
+
+        Promise.all([
+            loadImage('fop.gif'),
+            loadImage('happifop.gif')
+        ]).then(([fop, happifop]) => {
+            img1.style.backgroundImage = `url(${fop.src})`
+            img2.style.backgroundImage = `url(${happifop.src})`
         })
-    }
-
-    Promise.all([
-        loadImage('fop.gif'),
-        loadImage('happifop.gif')
-    ]).then(([cat, fox]) => {
-        catImg.style.backgroundImage = `url(${cat.src})`
-        foxImg.style.backgroundImage = `url(${fox.src})`
-    })
     </script>
     <script>
-    function playsound() {
+        const sfx = document.querySelector('#sfx')
+        const volume = document.querySelector('#volume')
 
-        var sfx = document.getElementById("sfx");
-        sfx.autoplay = 'true';
-        sfx.load();
-    }
+        function adjustVolume() {
+            sfx.volume = this.value / 100
+        }
+
+        volume.oninput = adjustVolume
+        adjustVolume.call(volume)
+
+        function playsound() {
+            sfx.play()
+        }
     </script>
 </body>
 
