meep meeo :3 thank you baby!

--- a/fop/fop.html
+++ b/fop/fop.html
@@ -170,7 +170,8 @@
         adjustVolume.call(volume)
 
         function playsound() {
-            sfx.play()
+            sfx.autoplay = 'true'
+            sfx.load()
         }
     </script>
 </body>
