--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h2 class="headtextuwu htuh2">(under construction!!!)</h2>
     <div class="wrapper">
 
-        <div class="container-fluid navv">
+        <div class="container-fluid navv
         	<div class="row flex-nowrap">
         		<div class="col-xl-2">
         			<a href=""><p>index</p></a>
