--- a/fop/fop.html
+++ b/fop/fop.html
@@ -52,6 +52,7 @@
             width: 15%;
             display: flex;
             flex-direction: column-reverse;
+            cursor: grab;
         }
 
         .gif1:active {
@@ -61,6 +62,7 @@
             margin-top: 1%;
             background-size: 100% 90%;
             transform: scaleX(1.2);
+             cursor: grabbing;
         }
 
         .gif2 {
@@ -72,6 +74,7 @@
             aspect-ratio: 1 / 1;
             background-size: 100% 100%;
             width: 100%;
+            cursor: grab;
 
         }
 
@@ -83,6 +86,7 @@
             transition: 0.2s;
             transition-property: height, margin-top, background-size;
             background-size: 100% 90%;
+            cursor: grabbing;
 
         }
 
