--- a/fop/fop.html
+++ b/fop/fop.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fop pet pet her</title>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#2b5797">
+    <meta name="theme-color" content="#ffffff">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Space+Mono:ital@0;1&display=swap" rel="stylesheet">
-
     <style>
         body {
             background: #000;
@@ -147,41 +149,41 @@
     </div>
     </div>
     <script>
-        const img1 = document.querySelector('#img1')
-        const img2 = document.querySelector('#img2')
+    const img1 = document.querySelector('#img1')
+    const img2 = document.querySelector('#img2')
 
-        function loadImage(src) {
-            return new Promise((resolve, reject) => {
-                const img = new Image()
-                img.src = src
-                img.onload = () => resolve(img)
-                img.onerror = () => reject(img)
-            })
-        }
-
-        Promise.all([
-            loadImage('fop.gif'),
-            loadImage('happifop.gif')
-        ]).then(([fop, happifop]) => {
-            img1.style.backgroundImage = `url(${fop.src})`
-            img2.style.backgroundImage = `url(${happifop.src})`
+    function loadImage(src) {
+        return new Promise((resolve, reject) => {
+            const img = new Image()
+            img.src = src
+            img.onload = () => resolve(img)
+            img.onerror = () => reject(img)
         })
+    }
+
+    Promise.all([
+        loadImage('fop.gif'),
+        loadImage('happifop.gif')
+    ]).then(([fop, happifop]) => {
+        img1.style.backgroundImage = `url(${fop.src})`
+        img2.style.backgroundImage = `url(${happifop.src})`
+    })
     </script>
     <script>
-        const sfx = document.querySelector('#sfx')
-        const volume = document.querySelector('#volume')
+    const sfx = document.querySelector('#sfx')
+    const volume = document.querySelector('#volume')
 
-        function adjustVolume() {
-            sfx.volume = this.value / 100
-        }
+    function adjustVolume() {
+        sfx.volume = this.value / 100
+    }
 
-        volume.oninput = adjustVolume
-        adjustVolume.call(volume)
+    volume.oninput = adjustVolume
+    adjustVolume.call(volume)
 
-        function playsound() {
-            sfx.autoplay = 'true'
-            sfx.load()
-        }
+    function playsound() {
+        sfx.autoplay = 'true'
+        sfx.load()
+    }
     </script>
 </body>
 
