--- a/fop/fop.html
+++ b/fop/fop.html
@@ -97,7 +97,7 @@
             width: 100%;
             height: 15px;
             border-radius: 5px;
-            background: #d3d3d3;
+            background: #201f49;
             outline: none;
             opacity: 0.7;
             -webkit-transition: .2s;
@@ -160,7 +160,7 @@
     <script>
         function GetValue()
 {
-    var myarray= new Array("RWWAARWR!!! ♥♥♥","RWERWRAARWWR!!!! ♡♡♡","RWWWWRAAARRWR!!! ♥♡♥....");
+    var myarray= new Array("RWWAARWR!!!~~ ♥♥♥","RWERWRAARWWR!!!!~ ♡♡♡","RWWWWRAAARRWR!!! ♥♡♥....");
     var random = myarray[Math.floor(Math.random() * myarray.length)];
     //alert(random);
     document.getElementById("message").innerHTML=random;
